@@ -6,14 +6,17 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections; // Use Collections.emptyList()
 
-@Document(collection = "users") // Ensure this matches your MongoDB collection name
-public class User implements UserDetails {
+@Document(collection = "users")
+public class User implements UserDetails { // Directly implement UserDetails
     @Id
     private String id;
     private String username;
     private String password;
+
+    // Default constructor (required by frameworks like Spring Data)
+    public User() {}
 
     // Constructor
     public User(String username, String password) {
@@ -21,9 +24,24 @@ public class User implements UserDetails {
         this.password = password;
     }
 
+    // Getters and setters for id, username
+    public String getId() {
+        return id;
+    }
+    public void setId(String id){
+        this.id = id;
+    }
+
+     public void setUsername(String username) {
+        this.username = username;
+    }
+
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(); // ✅ Update if roles are required
+        return Collections.emptyList(); // Return an empty list if no roles/authorities
+        // Or, if you have roles:
+        // return List.of(new SimpleGrantedAuthority("ROLE_USER")); // Example with a single role
     }
 
     @Override
@@ -31,11 +49,9 @@ public class User implements UserDetails {
         return password;
     }
 
-    
     public void setPassword(String password) {
         this.password = password;
     }
-    
 
     @Override
     public String getUsername() {
@@ -44,21 +60,21 @@ public class User implements UserDetails {
 
     @Override
     public boolean isAccountNonExpired() {
-        return true;
+        return true; // Or implement your logic
     }
 
     @Override
     public boolean isAccountNonLocked() {
-        return true;
+        return true; // Or implement your logic
     }
 
     @Override
     public boolean isCredentialsNonExpired() {
-        return true;
+        return true; // Or implement your logic
     }
 
     @Override
     public boolean isEnabled() {
-        return true;
+        return true; // Or implement your logic
     }
 }
